Rework java `:doc` (#185)
Fixes https://github.com/clojure-emacs/orchard/issues/179